                    o Added easy ability to remove callbacks.
                    o Registered all graphical input widgets to call
                      Xamine_DestroyGraphicalInput on both delete and popdown
                    o Have Xamine_DestroyGraphicalInput 
                      * Kill mouse callbacks for graph input.
                      * Remove the callbacks for delete and popdown.

April 1, 2008    - Stop recycling properties dialog so it gets
                   properly recreated (lesstif mis-remanages it).
April 4, 2008    - BZ330 - Don't call cancel callback in
                    Xamine_DestroyGraphicalInput until the callbacks
                    are removed so we avoid recursion that will double
                    destroy the object.
April 22, 2008   - Fix slight errors in binning in SpecTcl.. correctly
                   compute the bin width for the integeristas.
                   Per Thomas Baumann.
May 7, 2008      - Fix defect in Xamine gate acceptor on m2 spectra.
                   Needed to select appropriately between adding the gate
                   and modifying the existing gate, rather than unconditionally
                   adding the gate.. which can throw an uncaught exception.
                   Thanks to Kevin Carnes KSU for stepping into this defect
                   and alerting me to it.
                 - Added Kevin Carnes and Dirk Weisshaar to the acknowledgements.
June 5, 2008     - Fix typeo in BufferAnalysis.h

July 11, 2008    - Gui/slice.tcl - re-init the browser on accepting a gate (reinit member)
                   that restores the parameters used to the list.
                 - Expose the treeview interface to clients of 
                   Gui/browser.tcl
August 18, 2008  - Update to tkcon V2.4
September 17, 2008 
                 - Fixed error in RunState handling.. Set it to
                   "Inactive" on event source EOF.  This is needed to
 		   support batchmode processing of e.g. filter files.