@@ -807,3 +807,6 @@ September 17, 2008
                  - Fixed error in RunState handling.. Set it to
                    "Inactive" on event source EOF.  This is needed to
  		   support batchmode processing of e.g. filter files.
+September 26, 2008
+                 - backport capability to integrate superpositions as well
+                   as the base spectrum.
